<resources>
    <string name="app_name">goStudy</string>
    <string name="welcome_back">Welcome back</string>
    <string name="smart_learning_starts_here">Smart learning starts here.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="return_to_login">Already have an account? Login</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="join_gostudy">Join GoStudy and track your learning.</string>
    <string name="main_title">Hi, Student 👋</string>
    <string name="learning_overview">Here’s your learning overview for today.</string>
    <string name="gpa">GPA</string>
    <string name="gpa_value">87.4</string>
    <string name="next_task">Next task</string>
    <string name="task">Data Structures HW </string>
    <string name="study_summary">Summary</string>
    <string name="data">student data</string>
    <string name="courses">My courses</string>
    <string name="course_1">Operating Systems</string>
    <string name="progress_1">Progress: 70% · 2 tasks left</string>
    <string name="course_2">Mobile Development</string>
    <string name="progress_2">Progress: 45% · 3 tasks left</string>
    <string name="course_3">Linear Algebra</string>
    <string name="progress_3">Progress: 90% · 1 task left</string>
    <string name="home">Home</string>
    <string name="Courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="tasks_left">3 tasks left</string>
    <string name="total_tasks">total tasks</string>
    <string name="task_name">Task name</string>
    <string name="summary">0 of 0 tasks done (0%)</string>
    <string name="add_task">Add Task</string>
    <string name="user_name">User Name</string>
    <string name="users">Users</string>
    <string name="user_s_courses">User\'s courses</string>
    <string name="_0_of_0_tasks_done_0">0 of 0 tasks done (0%)</string>
    <string name="user_course_name">User - Course Name</string>
    <string name="profile_image_url">Profile image URL (optional)</string>
    <string name="user_overview">User overview</string>
    <string name="see_your_friend_s_study_progress">See your friend\'s study progress</string>
    <string name="divider2">--</string>
    <string name="divider1">-</string>
    <string name="delete_course">Delete Course</string>
</resources>